# Push-Gmail-Bridge

./: .env.example  .gitignore  GOOGLE_SETUP_CHECKLIST.md  README.md  pyproject.toml  setup.py
hermes_gmail_bridge/: __init__.py  app.py  approval_labels.py  auth.py  config.py  gmail_client.py  hermes.py  models.py  processor.py  pubsub.py  state.py
scripts/: backfill_recent.py  renew_watch.py  retry_failed_deliveries.py  setup_gmail_oauth.py  stop_watch.py
tests/: test_approval_labels.py  test_gmail_client.py  test_hermes.py  test_outbound.py  test_processor.py  test_pubsub.py
